# nanoDPO

./: README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: test.yml
docs/: changelog.rst  conf.py  index.rst
nanodpo/: causal_transformer.py  dpo_onemodel_trainer.py  multiclass_trainer.py  preference_data.py  sequence_data.py  simple_sequence_model.py
tests/: test_causal_transformer.py
