[metadata]
name = nanoDPO
version = 0.1
description = A nimble and innovative implementation of the Direct Preference Optimization (DPO) algorithm with Causal Transformer and LSTM model for time series data, inspired by the paper of DPO in fine-tuning unsupervised Language Models
author = James Liu
license = Apache-2.0
classifiers = 
    Development Status :: 4 - Beta

[options]
packages = nanodpo
install_requires = 
    # list your main dependencies here

[options.extras_require]
test = pytest

